Fixed app body sizing on smaller widths

--- a/src/sass/components/_body.scss
+++ b/src/sass/components/_body.scss
@@ -1,6 +1,7 @@
 @use '../abstracts' as *;
 
 .app-body {
+  flex: 1 1 100%;
   padding: 3rem;
   padding-top: 0;
   color: #000;
