--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -12,6 +12,7 @@
   ul {
     display: flex;
     flex-flow: row nowrap;
+    padding: 0;
     gap: 2rem;
     justify-content: center;
     list-style-type: none;
